# scav-mod-manager

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_account.rs  bepinex.rs  commands.rs  error.rs  game.rs  gamebanana.rs  lib.rs  main.rs  mods.rs  nexus.rs  nexus_sso.rs  nxm.rs  profiles.rs  state.rs  updates.rs
src/lib/: api.ts  types.ts  ui.tsx
src/routes/: Installed.tsx  Online.tsx  Profiles.tsx  Settings.tsx  Setup.tsx
