[package]
name = "scav-mod-manager"
version = "0.1.5"
description = "An r2modman-style mod manager for Casualties: Unknown / Scav Prototype"
authors = ["you"]
edition = "2021"

[lib]
name = "scav_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "cookies"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
open = "5"

zip = "2"
sevenz-rust = "0.6"

sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"

directories = "5"
thiserror = "2"
anyhow = "1"
url = "2"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
unrar-ng = "0.7.7"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
